Implementin several projects

--- a/Kickstarter.Framework/Kickstarter.Framework.csproj
+++ b/Kickstarter.Framework/Kickstarter.Framework.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KickStarter.Library\KickStarter.Library.csproj" />
+    <Folder Include="Query\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
