--- a/KickStarter.Library/KickStarter.Library.csproj
+++ b/KickStarter.Library/KickStarter.Library.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.XmlSerializer.Generator" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
