--- a/KickStarter.ServiceLayer.Servives/KickStarter.ServiceLayer.csproj
+++ b/KickStarter.ServiceLayer.Servives/KickStarter.ServiceLayer.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\KickStarter.Library\KickStarter.Library.csproj" />
+    <ProjectReference Include="..\KickStarter.BusinessLayer\KickStarter.BusinessLayer.csproj" />
+    <ProjectReference Include="..\KickStarter.DataLayer\KickStarter.DataLayer.csproj" />
+    <ProjectReference Include="\\mac\Home\Documents\Visual Studio 2017\Projects\KickStarter\KickStarter.Library\KickStarter.Library.csproj" />
   </ItemGroup>
 
 </Project>
