--- a/KickStarter.Library/KickStarter.Library.csproj
+++ b/KickStarter.Library/KickStarter.Library.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.XmlSerializer.Generator" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
