--- a/KickStarter.Library.Tests/KickStarter.Library.Tests.csproj
+++ b/KickStarter.Library.Tests/KickStarter.Library.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture.Xunit2" Version="4.5.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
