Working out of the box!

--- a/KickStarter.Library.Tests/App.config
+++ b/KickStarter.Library.Tests/App.config
@@ -3,6 +3,6 @@
   <appSettings>
     <add key="RunningMode" value="Local"/>
     <add key="applicationName" value="KickStarter.Library.Tests"/>
-    <add key="OutputFolder" value="C:/Meuk/Kickstarter" />
+    <add key="OutputFolder" value="C:/Meuk/Kickstarter_test_Outputs" />
   </appSettings>
 </configuration>
