--- a/KickStarter.BusinessLayer/KickStarter.BusinessLayer.csproj
+++ b/KickStarter.BusinessLayer/KickStarter.BusinessLayer.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KickStarter.DataLayer\KickStarter.DataLayer.csproj" />
-    <ProjectReference Include="\\mac\Home\Documents\Visual Studio 2017\Projects\KickStarter\KickStarter.Library\KickStarter.Library.csproj" />
+    <ProjectReference Include="..\KickStarter.Library\KickStarter.Library.csproj" />
   </ItemGroup>
 
   <ItemGroup>
