--- a/KickStarter.DataLayer/KickStarter.DataLayer.csproj
+++ b/KickStarter.DataLayer/KickStarter.DataLayer.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Kickstarter.Framework\KickStarter.Framework.csproj" />
-    <ProjectReference Include="\\mac\Home\Documents\Visual Studio 2017\Projects\KickStarter\KickStarter.Library\KickStarter.Library.csproj" />
+    <ProjectReference Include="..\KickStarter.Library\KickStarter.Library.csproj" />
   </ItemGroup>
 
 </Project>
